Bug 568513 - Implement NPN_PopUpContextMenu. r=josh a=blocking-beta3