dom/plugins/PluginInstanceChild.h
@@ -360,10 +360,18 @@ private:
 #endif // defined(OS_WIN)
 #if defined(OS_MACOSX)
 private:
-    CGColorSpaceRef mShColorSpace;
-    CGContextRef    mShContext;
-    int16_t         mDrawingModel;
-    nsCARenderer    mCARenderer;
+    CGColorSpaceRef       mShColorSpace;
+    CGContextRef          mShContext;
+    int16_t               mDrawingModel;
+    nsCARenderer          mCARenderer;
+
+public:
+    const NPCocoaEvent* getCurrentEvent() {
+        return mCurrentEvent;
+    }
+
+private:
+    const NPCocoaEvent   *mCurrentEvent;
 #endif
 };
 
